--- a/register.css
+++ b/register.css
@@ -43,7 +43,15 @@ body{
     margin: 5px;
     font-weight: bold;
 }
-.card .form button{
+.card  a{
+    margin-top:30px;
+    padding-top: 30px;
+    margin-left:50px;
+    font-size: 20px;
+    color:white;
+    text-shadow:0.3vw 0.2vw 0.2vw black;
+}
+/*.card  button{
     width: 100%;
     height: 3vw;
     margin-top:30px;
@@ -51,20 +59,20 @@ body{
     border:none;
     background: #60adde;
     opacity:0.7;
-    border-radius: 20px;
+    border-radius: 10px;
     font-size: 20px;
     color:white;
     text-shadow:0.3vw 0.2vw 0.2vw black;
 }
-.card .form button:hover{
+.card bottom:hover{
     background: darkblue;
-}
+}*/
 
 @media screen and (max-width: 1000px) and (min-width: 750px){
     .card{
         min-width: 250px;
     }
-    .card .form button{
+    .card  a{
         width: 100%;
         height: 5vw;
     }
@@ -77,7 +85,7 @@ body{
     .card h2{
         font-size: 4.5vw;
     }
-    .card .form button{
+    .card a{
         width: 100%;
         height: 7vw;
     }
