--- a/src/css/login.css
+++ b/src/css/login.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background:url('glenn-carstens-peters-203007-unsplash.jpg');
+    background:url('../images/login.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
