Add mvc register, groups page and view details modal

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -381,6 +381,16 @@ main .listcontact .contactname .button3 {
     margin-left: 93%;
 }
 
+main .listcontact .contactname .button-group {
+    margin-top: 24%;
+    margin-left: 93%;
+}
+
+.contactname .button-group img{
+    width:20px;
+    height: 20px;
+}
+
 .contactname .button1 img, .contactname .button2 img, .contactname .button3 img{
     width:20px;
     height: 20px;
@@ -517,6 +527,7 @@ main .listcontact .contactname .button3 {
     margin: 5% auto;
     padding: 3% 5%;
     background: #fff;
+    width: 35%;
 }
 
 ::-webkit-scrollbar {
@@ -527,28 +538,28 @@ main .listcontact .contactname .button3 {
     text-align: center;
 }
 
-.form-element{
+.modalDialog .form-element{
     display: grid;
 }
 
-.form-element input{
-    width: 20vw;
+.modalDialog .form-element input{
+    width: 25vw;
     height: 3vw;
     border: none;
     border-bottom: 1px solid;
     margin-top: -0.3em;
 }
-.form-element label{
+.modalDialog .form-element label{
     margin-top: 0.5em;
     font-size: 1.2em;
 }
 
-.form-element img{
+.modalDialog .form-element img{
     width: 5vw;
     height: 7vw;
 }
 
-.form-element button {
+#editProfileBtn {
     font-size: 1.5vw;
     font-weight: bold;
     color: #4682b4;
@@ -557,11 +568,11 @@ main .listcontact .contactname .button3 {
     border-radius: 23px;
     background-color: rgb(6, 8, 61);
     background-image: linear-gradient(rgb(6, 8, 61), rgb(10, 10, 15));
-    margin-left: 6vw;
+    margin-left: 8vw;
     margin-top: 0.5em;
 }
 
-.close {
+.modalDialog .close {
     background: #333333;
     color: #FFFFFF;
     line-height: 25px;
@@ -576,7 +587,7 @@ main .listcontact .contactname .button3 {
     box-shadow: 1px 1px 3px #000;
 }
 
-.close:hover {
+.modalDialog .close:hover {
     background: rgb(13, 29, 97);
 }
 
@@ -584,9 +595,9 @@ main .listcontact .contactname .button3 {
     .modalDialog>div {
         width: 60%;
     }
-    .right .editProfileForm label,
-    .right .editProfieleForm input,
-    .right .editProfileForm .button {
+    .modalDialog .right .editProfileForm label,
+    .modalDialog .right .editProfieleForm input,
+    .modalDialog .right .editProfileForm .button {
         font-size: 2vw;
     }
 }
@@ -595,9 +606,9 @@ main .listcontact .contactname .button3 {
     .modalDialog>div {
         width: 75%;
     }
-    .right .editProfileForm label,
-    .right .editProfileForm input,
-    .right .editProfileForm .button {
+    .modalDialog .right .editProfileForm label,
+    .modalDialog .right .editProfileForm input,
+    .modalDialog .right .editProfileForm .button {
         font-size: 2.5vw;
     }
 }
@@ -606,9 +617,9 @@ main .listcontact .contactname .button3 {
     .modalDialog>div {
         width: 75%;
     }
-    .right .editProfileForm label,
-    .right .editProfileForm input,
-    .right .editProfileForm .button {
+    .modalDialog .right .editProfileForm label,
+    .modalDialog .right .editProfileForm input,
+    .modalDialog .right .editProfileForm .button {
         font-size: 4vw;
     }
 }
@@ -638,6 +649,7 @@ main .listcontact .contactname .button3 {
     margin: 5% auto;
     padding: 3% 5%;
     background: #fff;
+    width: 30%;
 }
 
 ::-webkit-scrollbar {
@@ -656,6 +668,8 @@ main .listcontact .contactname .button3 {
     width: 20vw;
     padding-top: 1em;
     font-size: 15px;
+    border: none;
+    border-bottom: 1px solid;
 }
 .groupDialog .right textarea{
     width: 20vw;
@@ -676,7 +690,7 @@ main .listcontact .contactname .button3 {
     border-radius: 23px;
     background-color: rgb(6, 8, 61);
     background-image: linear-gradient(rgb(6, 8, 61), rgb(10, 10, 15));
-    margin-left: 3.5vw;
+    margin-left: 4vw;
     margin-top: 0.5em;
 }
 
@@ -728,6 +742,97 @@ main .listcontact .contactname .button3 {
     .right .addGroupForm label,
     .right .addGroupForm input,
     .right .addGroupForm .button {
+        font-size: 4vw;
+    }
+}
+
+/* add description group modal */
+
+.descriptionDialog {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(145, 145, 145, 0.8);
+    z-index: 99999;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.descriptionDialog:target {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.descriptionDialog>div {
+    overflow-x: hidden;
+    position: relative;
+    margin: 5% auto;
+    padding: 3% 5%;
+    background: #fff;
+    width: 30%;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+.descriptionDialog .right .header{
+    text-align: center;
+}
+
+.descriptionDialog .right p{
+    display: grid;
+}
+
+.descriptionDialog .right p{
+    margin-top: -0.6em;
+    font-size: 1.2em;
+}
+
+.descriptionDialog .right .close {
+    background: #333333;
+    color: #FFFFFF;
+    line-height: 25px;
+    position: absolute;
+    right: 12px;
+    text-align: center;
+    top: 12px;
+    width: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 12px;
+    box-shadow: 1px 1px 3px #000;
+}
+
+.descriptionDialog .right .close:hover {
+    background: rgb(13, 29, 97);
+}
+
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+    .descriptionDialog>div {
+        width: 60%;
+    }
+    .right .descriptionGroupForm p {
+        font-size: 2vw;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .descriptionDialog>div {
+        width: 75%;
+    }
+    .right .descriptionGroupForm p {
+        font-size: 2.5vw;
+    }
+}
+
+@media screen and (max-width: 455px) {
+    .descriptionModal>div {
+        width: 75%;
+    }
+    .right .descriptionGroupForm p {
         font-size: 4vw;
     }
 }
