Add mvc for add-contacts page

--- a/src/css/addcontact.css
+++ b/src/css/addcontact.css
@@ -70,7 +70,7 @@
     border-radius: 4px;
     background-color: rgb(6, 8, 61);
     background-image: linear-gradient(rgb(6, 8, 61), rgb(10, 10, 15));
-}
+} */
 
 .addcontact button:hover {
     background-color: rgb(13, 29, 97);
